--- a/app/views/vendedor-home.html
+++ b/app/views/vendedor-home.html
@@ -37,13 +37,34 @@
               	  <p class="centered"><a href="profile.html"><img src="" class="img-circle" width="60"></a></p>
               	  <h5 class="centered">Marcel Newman</h5>
               	  	
+                  <li class="sub-menu">
+                      <a ui-sref="create-shop" >
+                          <i class="fa fa-plus-square"></i>
+                          <span>Agregar tienda</span>
+                      </a>
+                  </li>
+                  
+                  <li class="sub-menu">
+                      <a ui-sref="list-of-shops" >
+                          <i class="fa fa-list"></i>
+                          <span>Lista de tiendas</span>
+                      </a>
+                  </li>
+                  
                   <li class="sub-menu"> <!-- antes decia class mt -->
                       <a ui-sref="add-product">
                           <i class="fa fa-cart-plus"></i>
                           <span>Agregar productos</span>
                       </a>
                   </li>
-
+                  
+                  <li class="sub-menu"> <!-- antes decia class mt -->
+                      <a ui-sref="list-of-products">
+                          <i class="fa fa-list-alt"></i>
+                          <span>Lista de productos</span>
+                      </a>
+                  </li>
+                  
                   <li class="sub-menu">
                       <a ui-sref="subscription">
                           <i class="fa fa-credit-card"></i>
