PP-01 Create edit-product view and modify other files

--- a/app/views/create-shop.html
+++ b/app/views/create-shop.html
@@ -13,6 +13,13 @@
                                   <input type="text" class="form-control" name="name" required/>
                               </div>
                           </div>
+                          <!--Description-->
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Descripción</label>
+                              <div class="col-sm-6">
+                                  <textarea type="text" class="form-control" name="description"></textarea>
+                              </div>
+                          </div>
                           
                           <!--Address-->
                           <h5><i class="fa fa-angle-right"></i> NOTA:<br/> Es importante que la dirección sea validada con Google Maps, esto debido a que los usuarios
