--- a/app/views/list-of-products.html
+++ b/app/views/list-of-products.html
@@ -6,49 +6,63 @@
 					<div class="row">
 						<! -- TODO PANEL -->
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
-							<div class="steps pn">
-							    <input id='op1' name='op1' type='checkbox' checked/>
-							    <label for='op1'>Update Profile</label>
-							    <input id='op2' name='op2' type='checkbox'/>
-							    <label for='op2'>Contact Paul</label>
-							    <input id='op3' name='op3' type='checkbox'/>
-							    <label for='op3'>Enjoy Life</label>
-							    <input type='submit' value='All Done!' id='submit'/>
+							<div class="product-panel-2 pn">
+                                <!--DISCOUNT-->
+								<div class="badge badge-hot">-15%</div>
+                                <!--IMAGE-->
+								<img src="images/bag.png" width="100" alt="">
+                                <!--NAME-->
+								<h5 class="mt">Bolso Morado</h5>
+                                <!--PRICE-->
+								<h6>PRECIO: $25000</h6>
+								<button class="btn btn-small btn-theme04">PUBLICAR</button>
+                                <div class="pr2-social centered">
+									<a ui-sref="edit-product" title="Editar"><i class="fa fa-edit" style="color:#424a5d"></i></a>
+									<a href="#" title="Eliminar"><i class="fa fa-eraser" style="color:#424a5d"></i></a>
+									<a href="#" title="Gráficos"><i class="fa fa-bar-chart" style="color:#424a5d"></i></a>
+								</div>
 							</div>
 						</div><! --/col-md-4 -->
 						
 						<! -- PROFILE 01 PANEL -->
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
-							<div class="content-panel pn">
-								<div id="profile-01">
-									<h3>Sharon Holmes</h3>
-									<h6>WEB DESIGNER</h6>
+							<div class="product-panel-2 pn">
+                                <!--DISCOUNT-->
+								<div class="badge badge-hot">-15%</div>
+                                <!--IMAGE-->
+								<img src="images/bag.png" width="100" alt="">
+                                <!--NAME-->
+								<h5 class="mt">Bolso Morado</h5>
+                                <!--PRICE-->
+								<h6>PRECIO: $25000</h6>
+								<button class="btn btn-small btn-theme04">PUBLICAR</button>
+                                <div class="pr2-social centered">
+									<a ui-sref="edit-product" title="Editar"><i class="fa fa-edit" style="color:#424a5d"></i></a>
+									<a href="#" title="Eliminar"><i class="fa fa-eraser" style="color:#424a5d"></i></a>
+									<a href="#" title="Gráficos"><i class="fa fa-bar-chart" style="color:#424a5d"></i></a>
 								</div>
-								<div class="profile-01 centered">
-									<p>ADD TO CONTACT LIST</p>
-								</div>
-								<div class="centered">
-									<h6><i class="fa fa-envelope"></i><br/>SHARON@DASHGUMTHEME.COM</h6>
-								</div>
-							</div><! --/content-panel -->
+							</div>
 						</div><! --/col-md-4 -->
 						
 						<! -- PROFILE 02 PANEL -->
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
-							<div class="content-panel pn">
-								<div id="profile-02">
-									<div class="user">
-										<img src="images/bag1.png" class="img-circle" width="80">
-										<h4>DJ SHERMAN</h4>
-									</div>
+							<div class="product-panel-2 pn">
+                                <!--DISCOUNT-->
+								<div class="badge badge-hot">-15%</div>
+                                <!--IMAGE-->
+								<img src="images/bag.png" width="100" alt="">
+                                <!--NAME-->
+								<h5 class="mt">Bolso Morado</h5>
+                                <!--PRICE-->
+								<h6>PRECIO: $25000</h6>
+								<button class="btn btn-small btn-theme04">PUBLICAR</button>
+                                <div class="pr2-social centered">
+									<a href="#" title="Editar"><i class="fa fa-edit" style="color:#424a5d"></i></a>
+									<a href="#" title="Eliminar"><i class="fa fa-eraser" style="color:#424a5d"></i></a>
+									<a href="#" title="Gráficos"><i class="fa fa-bar-chart" style="color:#424a5d"></i></a>
 								</div>
-								<div class="pr2-social centered">
-									<a href="#"><i class="fa fa-twitter"></i></a>
-									<a href="#"><i class="fa fa-facebook"></i></a>
-									<a href="#"><i class="fa fa-dribbble"></i></a>
-								</div>
-							</div><! --/panel -->
-						</div><!--/ col-md-4 -->
+							</div>
+						</div><! --/col-md-4 -->
 					</div><! --/END 2ND ROW OF PANELS -->
 					
 					<! -- 3RD ROW OF PANELS -->
@@ -95,17 +109,23 @@
 					
 						<! -- Blog Panel -->
 						<div class="col-lg-4 col-md-4 col-sm-4 mb">
-							<div class="content-panel pn">
-								<div id="blog-bg">
-									<div class="badge badge-popular">POPULAR</div>
-									<div class="blog-title">Incredible Title</div>
-								</div>
-								<div class="blog-text">
-									<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. <a href="#">Read More</a></p>
+							<div class="product-panel-2 pn">
+                                <!--DISCOUNT-->
+								<div class="badge badge-hot">-15%</div>
+                                <!--IMAGE-->
+								<img src="images/bag.png" width="100" alt="">
+                                <!--NAME-->
+								<h5 class="mt">Bolso Morado</h5>
+                                <!--PRICE-->
+								<h6>PRECIO: $25000</h6>
+								<button class="btn btn-small btn-theme04">PUBLICAR</button>
+                                <div class="pr2-social centered">
+									<a href="#" title="Editar"><i class="fa fa-edit" style="color:#424a5d"></i></a>
+									<a href="#" title="Eliminar"><i class="fa fa-eraser" style="color:#424a5d"></i></a>
+									<a href="#" title="Gráficos"><i class="fa fa-bar-chart" style="color:#424a5d"></i></a>
 								</div>
 							</div>
-						</div><!-- /col-md-4-->
-					</div><! -- END 3RD ROW OF PANELS -->
+						</div><! --/col-md-4 -->
           		
                       
 					
