--- a/app/views/list-of-shops.html
+++ b/app/views/list-of-shops.html
@@ -18,14 +18,21 @@
                                         <div class="modal-body">
                                             <form class="form-horizontal style-form" method="get">
                                                   <div class="form-group">
-                                                      <label class="col-sm-4 col-sm-4 control-label">Nombre</label>
+                                                      <label class="col-sm-2 control-label">Nombre</label>
                                                       <div class="col-sm-8">
                                                           <input type="password" class="form-control">
                                                       </div>
                                                   </div>
+                                                  <!--Description-->
+                                                  <div class="form-group">
+                                                      <label class="col-sm-2 control-label">Descripción</label>
+                                                      <div class="col-sm-8">
+                                                          <textarea type="text" class="form-control" name="description"></textarea>
+                                                      </div>
+                                                  </div>
                                                   <h5>Recordar que hay que validad la dirección con <a href="https://www.google.com/maps" target="_blank"><u>Google Maps</u></a>                                                        para así ingresarla en el campo de texto.</h5></br>
                                                   <div class="form-group">
-                                                      <label class="col-sm-4 col-sm-4 control-label">Dirección</label>
+                                                      <label class="col-sm-2 control-label">Dirección</label>
                                                       <div class="col-sm-8">
                                                           <input type="password" class="form-control">
                                                       </div>
