PP-01 Create the last views, this are the request view, also the admin session

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,7 +4,8 @@
     <img src="images/bag1.png" alt="promo"><br>
     Bienvenido a Promo App. Con esta aplicación podrás crear una de las mejores estrategias de mercado para tu empresa, ofreciendote mayor probabilidad de obtener 
       clientes con relación a las promociones que ingreses, además de darte la posibilidad de decirte cuál es el mercado que le interesa más tus productos gracias
-      a un sistema de recomendación que le mostrará a los usuarios sólo las promociones que le interesen de acuerdo a su edad, género y gustos personales.
+      a un sistema de recomendación que le mostrará a los usuarios sólo las promociones que le interesen de acuerdo a su edad, género y gustos personales.</br>
+        Comienza creando sesión en el botón "Crear cuenta" que se encuentra arriba a la izquierda, o ingresa si ya tienes una. 
   </p>
 </div>
 
