--- a/app/views/subscription.html
+++ b/app/views/subscription.html
@@ -82,7 +82,7 @@
                                         <li>El suscriptor tendrá acceso a la plataforma de marketing, en la cual tendrá información estadística de la 
                                         cantidad y el tipo de usuarios que consulten sus promociones.
                                         </li>
-                                        <li>Tendrá acceso a las 5 categorías básicas para ingresar sus productos en promoción.
+                                        <li>Tendrá acceso a las estadísticas de categorías, es decir, los gustos que tienen los usuarios por categoria.
                                         </li>
                                         <li>
                                             Podrá ingresar los productos en promoción que desee, y entre estos podrá elegir diez que 
@@ -135,7 +135,8 @@
                                         <li>El suscriptor tendrá acceso a la plataforma de marketing, en la cual tendrá información estadística de la 
                                         cantidad y el tipo de usuarios que consulten sus promociones.
                                         </li>
-                                        <li>Tendrá acceso a las <b>TODAS</b> categorías para ingresar sus productos en promoción.
+                                        <li>Tendrá acceso a las estadísticas de categorías, es decir, los gustos que tienen los usuarios por categoria
+                                        y también a estadísticas premium las cuales mostrarán las estadísticas por producto.
                                         </li>
                                         <li>
                                             Podrá ingresar los productos en promoción que desee, y entre estos podrá elegir <b>veinte</b> que 
