--- a/app/views/admin-home.html
+++ b/app/views/admin-home.html
@@ -13,12 +13,6 @@
             
             <div class="top-menu">
             	<ul class="nav pull-right top-menu">
-                     <li>
-                      <a class="logout"  ui-sref="settings">
-                          <i class="fa fa-cogs"></i>
-                      </a>
-                    </li>
-                    
                     <li><a class="logout" ui-sref="home">Cerrar Sesión</a></li>
             	</ul>
             </div>
@@ -34,48 +28,26 @@
               <!-- sidebar menu start-->
               <ul class="sidebar-menu" id="nav-accordion">
               
-              	  <p class="centered"><a href="profile.html"><img src="" class="img-circle" width="60"></a></p>
-              	  <h5 class="centered">Marcel Newman</h5>
+              	  <p class="centered"> <i class="fa fa-user fa-3x"></i></p>
+              	  <h5 class="centered">Bienvenido</br>Administrador</h5>
               	  	
-                  <li class="sub-menu">
-                      <a ui-sref="create-shop" >
-                          <i class="fa fa-plus-square"></i>
-                          <span>Agregar tienda</span>
-                      </a>
-                  </li>
                   
                   <li class="sub-menu">
-                      <a ui-sref="list-of-shops" >
-                          <i class="fa fa-list"></i>
-                          <span>Lista de tiendas</span>
+                      <a ui-sref="admin-request">
+                          <i class="fa fa-group"></i>
+                          <span>Peticiones</span>
                       </a>
-                  </li>
-                  
-                  <li class="sub-menu"> <!-- antes decia class mt -->
-                      <a ui-sref="add-product">
-                          <i class="fa fa-cart-plus"></i>
-                          <span>Agregar productos</span>
-                      </a>
-                  </li>
-                  
-                  <li class="sub-menu"> <!-- antes decia class mt -->
-                      <a ui-sref="list-of-products">
-                          <i class="fa fa-list-alt"></i>
-                          <span>Lista de productos</span>
-                      </a>
-                  </li>
-                  
+                  </li>               
                   <li class="sub-menu">
-                      <a ui-sref="subscription">
-                          <i class="fa fa-credit-card"></i>
-                          <span>Suscripción</span>
+                      <a ui-sref="admin-complaint" >
+                          <i class="fa fa-bullhorn"></i>
+                          <span>Quejas</span>
                       </a>
                   </li>
-                  
                   <li class="sub-menu">
-                      <a ui-sref="requests" >
-                          <i class="fa fa-exclamation-circle"></i>
-                          <span>Quejas y reclamos</span>
+                      <a ui-sref="admin-claim" >
+                          <i class="fa fa-child"></i>
+                          <span>Reclamos</span>
                       </a>
                   </li>
 
