--- a/app/views/vendedor-home.html
+++ b/app/views/vendedor-home.html
@@ -19,7 +19,7 @@
                       </a>
                     </li>
                     
-                    <li><a class="logout" ui-sref="home">Cerrar Sesión</a></li>
+                    <li><a class="logout" href="" ng-click="logout()">Cerrar Sesión</a></li>
             	</ul>
             </div>
         </header>
