--- a/app/views/edit-product.html
+++ b/app/views/edit-product.html
@@ -98,6 +98,20 @@
                                 </div><!--End div ExpirationDateCtrl-->
                               </div>
                           </div>
+                          <!--Shops-->
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Tiendas</label>
+                              <div class="col-xs-5">
+                                <select class="form-control" name="browsers" multiple>
+                                    <option value="chrome">Google Chrome</option>
+                                    <option value="firefox">Firefox</option>
+                                    <option value="ie">IE</option>
+                                    <option value="safari">Safari</option>
+                                    <option value="opera">Opera</option>
+                                    <option value="other">Other</option>
+                                </select>
+                            </div>
+                          </div>
 
                           <!--Cancel and ok buttons-->
                             <div class="row">
