--- a/app/views/sign-up.html
+++ b/app/views/sign-up.html
@@ -15,6 +15,8 @@
                 <br>
                 <input type="email" ng-model="manager.email" class="form-control" placeholder="Correo electrónico" name="email" id="email" required >
                 <br>
+                <input type="text" ng-model="manager.username" class="form-control" placeholder="Nombre de usuario" name="username" id="username" required >
+                <br>
                 <input type="password" ng-model="manager.password" class="form-control" placeholder="Contraseña" name="password" id="password" required >
                 <br>
                 <button ng-show = "!dataLoading"   class="btn btn-theme btn-block" href="" type="submit"> Terminar</button>
