--- a/app/views/add-product.html
+++ b/app/views/add-product.html
@@ -5,26 +5,26 @@
           		<div class="col-lg-10">
                   <div class="form-panel">
                   	  <h4 class="mb"><i class="fa fa-angle-right"></i> A continuación deberá llenar la información concerniente al producto que desea agregar</h4>
-                      <form class="form-horizontal style-form" method="get">
+                      <form class="form-horizontal style-form" ng-submit="createProduct(product)" >
                           <!--Name-->
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Nombre</label>
                               <div class="col-sm-6">
-                                  <input type="text" class="form-control" name="name" required/>
+                                  <input type="text" ng-model="product.name" class="form-control" name="name" required/>
                               </div>
                           </div>
                           <!--Description-->
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Descripción</label>
                               <div class="col-sm-6">
-                                  <textarea type="text" class="form-control" name="description"></textarea>
+                                  <textarea type="text" ng-model="product.description" class="form-control" name="description"></textarea>
                               </div>
                           </div>
                           <!--Price-->
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Precio</label>
                               <div class="col-sm-6">
-                                  <input type="number" class="form-control" name="price" required/>
+                                  <input type="number" ng-model="product.price" class="form-control" name="price" required/>
                                   <span class="help-block">No ingrese el signo pesos $, ni puntos ni comas. Ejm: 20000</span>
                               </div>
                           </div>
@@ -32,7 +32,7 @@
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Imagen</label>
                               <div class="col-sm-6">
-                                  <input type="file" accept="image/*" class="form-control" name="description">
+                                 <input type="file" file-model="product.image"/>
                               </div>
                           </div>
                           <!--Category-->
@@ -48,18 +48,19 @@
                                         
                                         <div class="modal-body">
                                             <p>seleccione a continuación la categoria que este más a corde al producto</p>
+                                            <p ng-show="selectedCategory">Categoria seleccionada:</p>
+                                            <p>{{selectedCategory.name}}<p/>
                                             <br>
                                             <div ng-controller="CategoryAccordionCtrl">
                                               <accordion close-others="oneAtATime">
-                                              
-                                                <accordion-group heading="Static Header, initially expanded" is-open="status.isFirstOpen" is-disabled="status.isFirstDisabled">
-                                                  This content is straight in the template.
+                                                <div ng-repeat="category in categories">
+                                                <accordion-group heading="{{category.name}}" >
+                                                    <div ng-repeat = "child in category.children">
+                                                    <button type="button" ng-click="setSelectedCategory({{child}})" class="btn btn-primary btn-lg btn-block">{{child.name}}</button>
+                                                    <br>
+                                                    </div>
                                                 </accordion-group>
-                                                
-                                                <accordion-group heading="{{group.title}}" ng-repeat="group in groups">
-                                                  {{group.content}}
-                                                </accordion-group>
-
+                                                </div>
                                               </accordion>
                                             </div>
                                         </div>
@@ -70,9 +71,10 @@
                                         </div>
                                     </script>
 
-                                    <a href="" style="text-decoration:underline" ng-click="categoryModal()">Agregar categoria</a>
-                                    <div ng-show="selected">Selection from a modal: {{ selected }}</div>
+                                    <a href=""  ng-click="categoryModal()" class="btn btn-success">Agregar categoria</a>
+                                    
                                 </div><!--End Modal-->
+                                  <div ng-show="category">Categoria Seleccionada: {{ category.name }}</div>
        
                               </div>
                           </div>
@@ -80,7 +82,7 @@
                           <div class="form-group">
                               <label class="col-sm-2 col-sm-2 control-label">Descuento</label>
                               <div class="col-sm-6">
-                                  <input type="number" class="form-control" name="discount" required/>
+                                  <input type="number" ng-model="product.discount" class="form-control" name="discount" required/>
                                   <span class="help-block">No ingrese el signo de porcentaje %. Ejm: 25</span>
                               </div>
                           </div>
@@ -90,7 +92,6 @@
                               <div class="col-sm-10">
                                   <div ng-controller="ExpirationDateCtrl">
                                       <h5><b>{{dt | date:'fullDate'| uppercase }}</b></h5>
-                                      
                                       <br>
 
                                     <div style="display:inline-block; min-height:290px;">
@@ -99,21 +100,29 @@
                                 </div><!--End div ExpirationDateCtrl-->
                               </div>
                           </div>
-
-                          <!--Cancel and ok buttons-->
-                            <div class="row">
+                          <!--Shops-->
+                          <div class="form-group">
+                              <label class="col-sm-2 col-sm-2 control-label">Disponibilidad en tiendas</label>
+                            <div class="col-sm-10" translation-texts="translations" ng-dropdown-multiselect="" options="selectData" selected-model="shops"></div>
+                            </div>
+                           <!--Cancel and ok buttons-->
+                           
+                           <div class="row">
                                 <div class="col-lg-4">
                                 </div>
                                 <div class="col-lg-2">
                                     <!--If ui-sref is putted instead of ng-href, it wont ask to put the requiered textfields-->
-                                    <button class="btn btn-default btn-block" ng-href="login" type="submit" name="cancel"> Cancelar</button>
+                                    <button class="btn btn-default btn-block" ng-href="login" name="cancel"> Cancelar</button>
                                 </div>
                                 <div class="col-lg-2">
-                                    <button class="btn btn-theme btn-block" ng-href="login" type="submit" name="accept"> Aceptar</button>
+                                    <button class="btn btn-theme btn-block"  name="accept" type="submit" > Aceptar</button>
                                 </div>
                                 <div class="col-lg-4">
                                 </div>
                             </div>    
+                          </div>
+                      
+                         
                       </form>
                       
                       <!--Cancel & Ok buttons-->
