--- a/app/views/list-of-shops.html
+++ b/app/views/list-of-shops.html
@@ -3,11 +3,11 @@
           	<!-- BASIC FORM ELELEMNTS -->
           	<div class="row mt">
           		<div class="col-lg-10">
-                  <div class="form-panel">
+                  <div ng-repeat="shop in shops" class="form-panel">
                       <form class="form-horizontal style-form" method="get">
                           <div class="form-group">
                               <div class="col-sm-6">
-                                  <label class="col-sm-12 control-label">Universidad Distrital Francisco Jose de Caldas</label>
+                                  <label class="col-sm-12 control-label">{{shop.name}}</label>
                               </div>
                               
                               <div ng-controller="EditShopModalCtrl"><!--Modal-->
@@ -20,21 +20,21 @@
                                                   <div class="form-group">
                                                       <label class="col-sm-2 control-label">Nombre</label>
                                                       <div class="col-sm-8">
-                                                          <input type="password" class="form-control">
+                                                          <input ng-model="shop.name" type="text" class="form-control">
                                                       </div>
                                                   </div>
                                                   <!--Description-->
                                                   <div class="form-group">
                                                       <label class="col-sm-2 control-label">Descripción</label>
                                                       <div class="col-sm-8">
-                                                          <textarea type="text" class="form-control" name="description"></textarea>
+                                                          <textarea type="text" ng-model="shop.description" class="form-control" name="description"></textarea>
                                                       </div>
                                                   </div>
                                                   <h5>Recordar que hay que validad la dirección con <a href="https://www.google.com/maps" target="_blank"><u>Google Maps</u></a>                                                        para así ingresarla en el campo de texto.</h5></br>
                                                   <div class="form-group">
                                                       <label class="col-sm-2 control-label">Dirección</label>
                                                       <div class="col-sm-8">
-                                                          <input type="password" class="form-control">
+                                                          <input ng-model="shop.address" type="text" class="form-control">
                                                       </div>
                                                   </div>
                                             </form>  
@@ -46,8 +46,8 @@
                                         </div>
                                     </script>
                                   
-                                    <button type="submit" class="btn btn-theme" ng-click="editShopModal()">Editar</button>
-                                    <button type="submit" class="btn btn-default">Eliminar</button>
+                                    <button type="submit" class="btn btn-theme" ng-click="editShopModal({{shop.id}})">Editar</button>
+                                    <button ng-click = "deleteShop({{shop.id}})" class="btn btn-default">Eliminar</button>
                                     <div ng-show="selected">Selection from a modal: {{ selected }}</div>
                               </div><!--End Modal-->   
 
