--- a/app/styles/style.css
+++ b/app/styles/style.css
@@ -986,7 +986,7 @@ PANELS CONFIGURATIONS
 /*Panel Size*/
 
 .pn {
-	height: 350px;
+	/*height: 350px;*/
 	box-shadow: 0 2px 1px rgba(0, 0, 0, 0.2);
 }
 
