--- a/app/views/main.html
+++ b/app/views/main.html
@@ -27,7 +27,7 @@
 									<div class="row">
 								        <h3 class="centered">$10.000</h3>
 										<div class="col-sm-12 col-xs-12">
-											<p class="goleft" style="text-align: center">No permite acceso a plataforma de marketing la cual facilita información estadística, pero puede ingresar 2 promociones.</p>
+											<p class="goleft" style="text-align: center; font-size: 20px">No permite acceso a plataforma de marketing la cual facilita información estadística, pero puede ingresar 2 promociones.</p>
 										</div>
 									</div>
 								</div>
@@ -42,7 +42,7 @@
 									<div class="row">
 								        <h3 class="centered">$30.000</h3>
 										<div class="col-sm-12 col-xs-12">
-											<p class="goleft" style="text-align: center">Acceso a la plataforma de marketing, así como a 5 categorias y                                                podrá ingresar hasta 10 promociones. </p>
+											<p class="goleft" style="text-align: center; font-size: 20px">Acceso a la plataforma de marketing, así como a 5 categorias y                                                podrá ingresar hasta 10 promociones. </p>
 										</div>
 									</div>
 								</div>
@@ -57,7 +57,7 @@
 									<div class="row">
 								        <h3 class="centered">$50.000</h3>
 										<div class="col-sm-12 col-xs-12">
-											<p class="goleft" style="text-align: center">Tendrá acceso a la plataforma de marketing, a todas las                                                           categorías y podrá ingresar hasta 20  productos en promoción.</p>
+											<p class="goleft" style="text-align: center; font-size: 20px">Tendrá acceso a la plataforma de marketing, a todas las                                                           categorías y podrá ingresar hasta 20  productos en promoción.</p>
 										</div>
 									</div>
 								</div>
