--- a/app/views/vendedor-home.html
+++ b/app/views/vendedor-home.html
@@ -1,14 +1,14 @@
-  <section id="container" >
+<section id="container" >
       <!-- **********************************************************************************************************************************************************
       TOP BAR CONTENT & NOTIFICATIONS
       *********************************************************************************************************************************************************** -->
       <!--header start-->
-      <header class="header black-bg">
+        <header class="header black-bg">
               <div class="sidebar-toggle-box">
-                  <div data-placement="right" data-original-title="Toggle Navigation"></div>
+                  <i class="fa fa-arrow-circle-down fa-lg toggle-btn" title="Desplegar menú" data-toggle="collapse" data-target="#menu-content"></i>
               </div>
             <!--logo start-->
-            <a href="index.html" class="logo"><b>PROMO APP</b></a>
+            <a href="" class="logo"><b>PROMO APP</b></a>
             <!--logo end-->
             
             <div class="top-menu">
@@ -29,12 +29,12 @@
       MAIN SIDEBAR MENU
       *********************************************************************************************************************************************************** -->
       <!--sidebar start-->
-      <aside>
-          <div id="sidebar"  class="nav-collapse ">
-              <!-- sidebar menu start-->
-              <ul class="sidebar-menu" id="nav-accordion">
-              
-              	  <p class="centered" ng-show="image_present">
+      <div class="nav-collapse" id="sidebar">
+  
+        <div class="menu-list">
+  
+            <ul id="menu-content" class="menu-content collapse out sidebar-menu">
+                <p class="centered" ng-show="image_present">
                       <a href="profile.html">
                            <img  ng-src="{{api.url_for_img + manager.company_logo}}" class="img-circle" width="60" >
                      
@@ -51,7 +51,7 @@
                   
                   <li class="sub-menu">
                       <a ui-sref="list-of-shops" >
-                          <i class="fa fa-list"></i>
+                          <i class="fa fa-list"></i>    
                           <span>Lista de tiendas</span>
                       </a>
                   </li>
@@ -83,11 +83,10 @@
                           <span>Quejas y reclamos</span>
                       </a>
                   </li>
-
-              </ul>
-              <!-- sidebar menu end-->
-          </div>
-      </aside>
+                    
+            </ul>
+     </div>
+</div>
       <!--sidebar end-->
       
       <!-- **********************************************************************************************************************************************************
