--- a/app/views/list-of-products.html
+++ b/app/views/list-of-products.html
@@ -1,9 +1,10 @@
           	<h3><i class="fa fa-angle-right"></i> Tus productos</h3>
           	<div class="row mt">
-          		<div class="col-lg-12">				
-					
+          		<div class="col-lg-12">
+                    <span us-spinner ng-show="dataLoading"></span>
+					<h3 ng-show="!hasSubscription"> Compra una subscripción porfavor </h3>
 					<! -- 2ND ROW OF PANELS -->
-					<div class="row">
+					<div  ng-show="hasSubscription" class="row">
 						<! -- TODO PANEL -->
 						<div ng-repeat = "product in products" class="col-lg-4 col-md-4 col-sm-4 mb">
 							<div class="product-panel-2 pn">
@@ -15,8 +16,11 @@
 								<h5 class="mt">{{product.name}}</h5>
                                 <!--PRICE-->
 								<h6>PRECIO: ${{product.price}}</h6>
-                                <h6>CATEGORIA: {{product.category_name}}</h6>
-								<button class="btn btn-small btn-theme04">PUBLICAR</button>
+                                <h6>CATEGORIA: {{product.category_name}}</h6>   
+                                <button ng-show="{{!product.published}}" ng-click="publish({{product.id}})" class="btn btn-small btn-success">PUBLICAR</button>
+                                <button ng-show="{{product.published}}" ng-click="unpublish({{product.id}})" class="btn btn-small btn-theme04">NO PUBLICAR</button>
+
+
                                 <div class="pr2-social centered">
 									<a ui-sref="edit-product" title="Editar"><i class="fa fa-edit" style="color:#424a5d"></i></a>
 									<a href="" ng-click="deleteProduct({{product.id}})" title="Eliminar"><i class="fa fa-eraser" style="color:#424a5d"></i></a>
